force-app/main/default/objects/Transaction_Table__c/Transaction_Table__c.object-meta.xml
<CustomObject>
    <description>Used to bring data in from external sources (Penthao\Alteryx), this data is then used to create/update objects rather than store them in multiple objects, this is one object to rule them all.</description>
    <label>Transaction Table</label>
    <nameField>
        <label>Transaction Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>