force-app/main/default/objects/Transaction_Table__c/fields/Incoming_Primary__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Primary__c</fullName>
    <description>Primary from the SQL table</description>
    <externalId>true</externalId>
    <label>Incoming Primary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>