force-app/main/default/objects/Transaction_Table__c/fields/Linked_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Linked_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Opportunity Related to the transaction</description>
    <label>Linked Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Transactions Table</relationshipLabel>
    <relationshipName>Transactions_Table</relationshipName>
    <type>Lookup</type>
</CustomField>