force-app/main/default/objects/Transaction_Table__c/fields/Notes_Long__c.field-meta.xml
<CustomField>
    <fullName>Notes_Long__c</fullName>
    <description>incoming Notes Long, used in Taskray</description>
    <label>Notes Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>