force-app/main/default/objects/Transaction_Table__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Related to the object within salesforce</description>
    <label>Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Taskray Project</fullName>
            </value>
            <value>
                <fullName>UDEF_TaskrayProjectRequest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>