force-app/main/default/objects/Transaction_Table__c/fields/Owner_E_mail__c.field-meta.xml
<CustomField>
    <fullName>Owner_E_mail__c</fullName>
    <description>The owner E-mail</description>
    <label>Owner E-mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>