force-app/main/default/objects/Transaction_Table__c/fields/Taskray_Product__c.field-meta.xml
<CustomField>
    <fullName>Taskray_Product__c</fullName>
    <description>The Taskray product supplied by the integration</description>
    <label>Taskray Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>