force-app/main/default/objects/Transaction_Table__c/fields/TaskRay_Project__c.field-meta.xml
<CustomField>
    <fullName>TaskRay_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Taskray Project from salesforce to push out to SQL</description>
    <label>TaskRay Project</label>
    <referenceTo>TASKRAY__Project__c</referenceTo>
    <relationshipLabel>Transactions Table</relationshipLabel>
    <relationshipName>Transactions_Table</relationshipName>
    <type>Lookup</type>
</CustomField>