force-app/main/default/objects/Transaction_Table__c/fields/Taskray_Status__c.field-meta.xml
<CustomField>
    <fullName>Taskray_Status__c</fullName>
    <description>The incomming taskray Status</description>
    <label>Taskray Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>