force-app/main/default/objects/Transaction_Table__c/fields/Taskray_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Taskray_Status_Reason__c</fullName>
    <description>The incoming Status Reason for Taskray</description>
    <label>Taskray Status Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>