force-app/main/default/objects/Transaction_Table__c/fields/Taskray_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Taskray_Template_Id__c</fullName>
    <description>Holds the template ID for the taskray project to be cloned</description>
    <label>Taskray Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>