force-app/main/default/objects/Transaction_Table__c/recordTypes/Taskray_Project_Spinup.recordType-meta.xml
<RecordType>
    <fullName>Taskray_Project_Spinup</fullName>
    <active>true</active>
    <description>Project Spinup Taskray Record, records created via integration</description>
    <label>Taskray Project Spinup</label>
</RecordType>